Cambios de nombre en controladores de api y actualizaciones a la api
