# src/controllers/api/grupo.api.controller.js
@@ -41,6 +41,41 @@ async function getGrupoById(req, res, db) {
     await transaction.commit();
 }
 
+async function getGrupoByCursoLetra(req, res, db) {
+    try {
+        curso = Number(req.body.curso);
+    }
+    catch (error) {
+        res.status(400).send('Datos suministrados no válidos');
+        return;
+    }
+
+    if (typeof req.body.grupo != "string") {
+        res.status(400).send('Datos suministrados no válidos');
+        return;
+    }
+
+    const transaction = db.sequelize.transaction();
+
+    const query_grupo = grupo.findOne({
+        attributes: ['id'],
+        where: {
+            curso: curso,
+            letra: req.body.grupo
+        }
+    });
+
+    if (Object.keys(query_grupo.dataValues).length == 0) {
+        res.status(404).send('Grupo no encontrado');
+        transaction.rollback();
+        return;
+    }
+
+    res.status(200).send(query_grupo.dataValues);
+    transaction.rollback();
+    return;
+}
+
 module.exports = {
-    getGrupoById
+    getGrupoById, getGrupoByCursoLetra
 }
